--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,23 @@
 				"clear": false
 			}
 			
+		},
+		{			
+			"label": "配置输入",
+			"group": "build",
+			"command": "python",
+			"args": ["${workspaceFolder}\\script\\python\\configureInput.py"],			
+			"problemMatcher": [],
+			"options": {"cwd": "${workspaceFolder}"},
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "shared",
+				"showReuseMessage": true, 
+				"clear": false
+			}
+			
 		}
 	]
 }
