--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,17 @@ target_link_directories(${exeName} PRIVATE ${ABS_DIR}/Engine/ExternLibrary/SFML/
 target_link_libraries(${exeName} opengl32 sfml-graphics sfml-window sfml-system sfml-audio  winmm user32)
 target_compile_definitions(${exeName} PRIVATE -DEDITOR)
 
+#GameEditor
+set(exeName GameEditor)
+file(GLOB_RECURSE src 
+    ${ABS_DIR}/Engine/editor/*.cpp
+    version.rc)
+add_executable(${exeName}  ${src})
+set_target_properties(${exeName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${ABS_DIR}/output/bin)
+target_link_directories(${exeName} PRIVATE ${ABS_DIR}/Engine/ExternLibrary/SFML/lib)
+target_link_libraries(${exeName} opengl32 sfml-graphics sfml-window sfml-system sfml-audio  winmm user32)
+target_compile_definitions(${exeName} PRIVATE -DEDITOR)
+
 #mainTest
 set(exeName mainTest)
 file(GLOB_RECURSE src 
