--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(Start start.cpp version.rc)
 set(exeName Game)
 file(GLOB_RECURSE src 
     ${ABS_DIR}/Engine/gameFramework/*.cpp
+    ${ABS_DIR}/gameSample/*.cpp
     version.rc)
 add_executable(${exeName}  ${src})
 set_target_properties(${exeName} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${ABS_DIR}/output/bin)
