--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -3,6 +3,14 @@ Pos=60,60
 Size=400,400
 
 [Window][uitest]
-Pos=257,227
-Size=197,428
+Pos=36,55
+Size=229,381
+
+[Window][windowXXX]
+Pos=88,73
+Size=424,146
+
+[Window][menus]
+Pos=0,0
+Size=1600,32
 
