--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=0,0
 Size=400,400
 
 [Window][uitest]
@@ -11,6 +11,14 @@ Pos=88,73
 Size=424,146
 
 [Window][menus]
-Pos=0,0
-Size=1600,32
+Pos=-13,169
+Size=1600,47
+
+[Window][w1]
+Pos=187,201
+Size=473,557
+
+[Window][window1]
+Pos=4,30
+Size=300,500
 
