--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -19,7 +19,10 @@ Pos=187,201
 Size=473,557
 
 [Window][window1]
-Pos=129,245
+Pos=80,79
 Size=300,500
-Collapsed=1
+
+[Window][winxxx]
+Pos=575,226
+Size=204,322
 
