--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -38,3 +38,31 @@ Size=207,209
 Pos=702,299
 Size=408,406
 
+[Window][Dear ImGui Demo]
+Pos=567,100
+Size=550,680
+
+[Window][Hello, world!]
+Pos=144,273
+Size=339,180
+
+[Window][Another Window]
+Pos=60,60
+Size=198,71
+
+[Window][Example: Assets Browser]
+Pos=111,80
+Size=833,633
+
+[Window][Example: Console]
+Pos=60,61
+Size=520,600
+
+[Window][Example: Documents]
+Pos=60,60
+Size=621,737
+
+[Table][0xB6880529,2]
+RefScale=13
+Column 0  Sort=0^
+
