--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -19,7 +19,7 @@ Pos=187,201
 Size=473,557
 
 [Window][window1]
-Pos=153,282
+Pos=0,45
 Size=300,500
 
 [Window][winxxx]
@@ -35,7 +35,7 @@ Pos=589,307
 Size=207,209
 
 [Window][popwindow]
-Pos=702,299
+Pos=616,279
 Size=408,406
 
 [Window][Dear ImGui Demo]
@@ -61,6 +61,10 @@ Size=520,600
 [Window][Example: Documents]
 Pos=60,60
 Size=621,737
+
+[Window][地图视口]
+Pos=303,27
+Size=1502,946
 
 [Table][0xB6880529,2]
 RefScale=13
