--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -19,7 +19,7 @@ Pos=187,201
 Size=473,557
 
 [Window][window1]
-Pos=0,45
+Pos=-3,21
 Size=300,500
 
 [Window][winxxx]
@@ -63,8 +63,12 @@ Pos=60,60
 Size=621,737
 
 [Window][地图视口]
-Pos=303,27
-Size=1502,946
+Pos=312,25
+Size=1439,942
+
+[Window][地形材质]
+Pos=1148,374
+Size=298,425
 
 [Table][0xB6880529,2]
 RefScale=13
