--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -19,8 +19,9 @@ Pos=187,201
 Size=473,557
 
 [Window][window1]
-Pos=6,31
-Size=300,500
+Pos=0,24
+Size=384,794
+Collapsed=1
 
 [Window][winxxx]
 Pos=97,114
@@ -63,12 +64,18 @@ Pos=60,60
 Size=621,737
 
 [Window][地图视口]
-Pos=305,67
-Size=1175,771
+Pos=384,24
+Size=1152,794
+Collapsed=1
 
 [Window][地形材质]
-Pos=781,154
-Size=423,561
+Pos=1536,24
+Size=384,794
+Collapsed=1
+
+[Window][SplitterContainer]
+Pos=0,24
+Size=1920,969
 
 [Table][0xB6880529,2]
 RefScale=13
