--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -19,9 +19,8 @@ Pos=187,201
 Size=473,557
 
 [Window][window1]
-Pos=0,24
-Size=384,794
-Collapsed=1
+Pos=0,21
+Size=298,724
 
 [Window][winxxx]
 Pos=97,114
@@ -64,18 +63,20 @@ Pos=60,60
 Size=621,737
 
 [Window][地图视口]
-Pos=384,24
-Size=1152,794
-Collapsed=1
+Pos=300,21
+Size=1259,724
 
 [Window][地形材质]
-Pos=1536,24
-Size=384,794
-Collapsed=1
+Pos=1561,21
+Size=358,724
 
 [Window][SplitterContainer]
-Pos=0,24
-Size=1920,969
+Pos=0,21
+Size=1916,973
+
+[Window][底部信息]
+Pos=0,747
+Size=1916,269
 
 [Table][0xB6880529,2]
 RefScale=13
