--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -39,11 +39,11 @@ Pos=648,353
 Size=408,406
 
 [Window][Dear ImGui Demo]
-Pos=567,100
-Size=550,680
+Pos=586,122
+Size=550,643
 
 [Window][Hello, world!]
-Pos=144,273
+Pos=115,231
 Size=339,180
 
 [Window][Another Window]
@@ -51,12 +51,12 @@ Pos=60,60
 Size=198,71
 
 [Window][Example: Assets Browser]
-Pos=111,80
+Pos=375,99
 Size=833,633
 
 [Window][Example: Console]
-Pos=60,61
-Size=520,600
+Pos=483,263
+Size=713,449
 
 [Window][Example: Documents]
 Pos=60,60
@@ -78,7 +78,15 @@ Size=1920,975
 Pos=0,730
 Size=1920,286
 
+[Window][Dear ImGui Demo/ResizableChild_478B81A3]
+IsChild=1
+Size=499,136
+
+[Window][Dear ImGui Demo/Red_BEEF922B]
+IsChild=1
+Size=200,100
+
 [Table][0xB6880529,2]
 RefScale=13
-Column 0  Sort=0^
+Column 0  Sort=0v
 
