--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -20,7 +20,7 @@ Size=473,557
 
 [Window][window1]
 Pos=0,21
-Size=382,705
+Size=382,665
 
 [Window][winxxx]
 Pos=97,114
@@ -35,7 +35,7 @@ Pos=589,307
 Size=207,209
 
 [Window][popwindow]
-Pos=648,353
+Pos=619,353
 Size=408,406
 
 [Window][Dear ImGui Demo]
@@ -64,19 +64,19 @@ Size=621,737
 
 [Window][地图视口]
 Pos=386,21
-Size=1148,705
+Size=1148,794
 
 [Window][地形材质]
-Pos=1538,21
-Size=379,705
+Pos=1684,21
+Size=233,665
 
 [Window][SplitterContainer]
 Pos=0,21
 Size=1920,975
 
 [Window][底部信息]
-Pos=0,730
-Size=1920,286
+Pos=0,690
+Size=1525,326
 
 [Window][Dear ImGui Demo/ResizableChild_478B81A3]
 IsChild=1
@@ -85,6 +85,14 @@ Size=499,136
 [Window][Dear ImGui Demo/Red_BEEF922B]
 IsChild=1
 Size=200,100
+
+[Window][CheckerPort]
+Pos=1525,690
+Size=394,326
+
+[Window][port]
+Pos=386,21
+Size=1294,665
 
 [Table][0xB6880529,2]
 RefScale=13
