--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -20,7 +20,7 @@ Size=473,557
 
 [Window][window1]
 Pos=0,21
-Size=382,665
+Size=382,794
 
 [Window][winxxx]
 Pos=97,114
@@ -35,7 +35,7 @@ Pos=589,307
 Size=207,209
 
 [Window][popwindow]
-Pos=619,353
+Pos=617,351
 Size=408,406
 
 [Window][Dear ImGui Demo]
@@ -67,8 +67,8 @@ Pos=386,21
 Size=1148,794
 
 [Window][地形材质]
-Pos=1684,21
-Size=233,665
+Pos=1538,21
+Size=379,794
 
 [Window][SplitterContainer]
 Pos=0,21
@@ -87,12 +87,16 @@ IsChild=1
 Size=200,100
 
 [Window][CheckerPort]
-Pos=1525,690
-Size=394,326
+Pos=1536,819
+Size=383,197
 
 [Window][port]
 Pos=386,21
-Size=1294,665
+Size=1148,794
+
+[Window][对象浏览]
+Pos=0,819
+Size=1536,197
 
 [Table][0xB6880529,2]
 RefScale=13
