--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -39,20 +39,20 @@ Pos=617,351
 Size=408,406
 
 [Window][Dear ImGui Demo]
-Pos=586,122
+Pos=620,45
 Size=550,643
 
 [Window][Hello, world!]
-Pos=115,231
-Size=339,180
+Pos=151,192
+Size=339,172
 
 [Window][Another Window]
 Pos=60,60
 Size=198,71
 
 [Window][Example: Assets Browser]
-Pos=292,53
-Size=833,652
+Pos=229,64
+Size=881,659
 
 [Window][Example: Console]
 Pos=483,263
@@ -98,7 +98,15 @@ Size=1148,684
 Pos=0,709
 Size=1471,307
 
+[Window][Int Vector Browser]
+Pos=170,300
+Size=500,400
+
+[Window][testW]
+Pos=194,126
+Size=597,418
+
 [Table][0xB6880529,2]
 RefScale=13
-Column 0  Sort=0v
+Column 0  Sort=0^
 
