周四23-10-2025 PM12:31 Windows平台

--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -20,7 +20,7 @@ Size=473,557
 
 [Window][window1]
 Pos=0,21
-Size=382,795
+Size=382,820
 
 [Window][winxxx]
 Pos=97,114
@@ -87,16 +87,16 @@ IsChild=1
 Size=200,100
 
 [Window][CheckerPort]
-Pos=1536,820
-Size=383,197
+Pos=1536,845
+Size=383,172
 
 [Window][port]
 Pos=386,21
-Size=1148,795
+Size=1148,820
 
 [Window][对象浏览]
-Pos=0,820
-Size=1536,197
+Pos=0,845
+Size=1536,172
 
 [Window][Int Vector Browser]
 Pos=170,300
@@ -105,6 +105,10 @@ Size=500,400
 [Window][testW]
 Pos=286,175
 Size=892,564
+
+[Window][属性面板]
+Pos=1538,21
+Size=379,820
 
 [Table][0xB6880529,2]
 RefScale=13
