--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -110,6 +110,10 @@ Size=892,564
 Pos=1538,21
 Size=379,795
 
+[Window][testwin]
+Pos=31,367
+Size=333,381
+
 [Table][0xB6880529,2]
 RefScale=13
 Column 0  Sort=0^
