周一01-12-2025 PM12:46 Windows平台

--- a/output/bin/settings/imgui.ini
+++ b/output/bin/settings/imgui.ini
@@ -20,7 +20,7 @@ Size=473,557
 
 [Window][window1]
 Pos=0,21
-Size=382,794
+Size=382,795
 
 [Window][winxxx]
 Pos=97,114
@@ -72,7 +72,7 @@ Size=379,795
 
 [Window][SplitterContainer]
 Pos=0,21
-Size=1920,975
+Size=1920,976
 
 [Window][底部信息]
 Pos=0,690
@@ -87,15 +87,16 @@ IsChild=1
 Size=200,100
 
 [Window][CheckerPort]
-Pos=1536,819
+Pos=1536,820
 Size=383,197
 
 [Window][port]
 Pos=386,21
-Size=1148,794
+Size=1148,795
+Collapsed=1
 
 [Window][对象浏览]
-Pos=0,819
+Pos=0,820
 Size=1536,197
 
 [Window][Int Vector Browser]
@@ -108,7 +109,7 @@ Size=892,564
 
 [Window][属性面板]
 Pos=1538,21
-Size=379,794
+Size=379,795
 
 [Window][testwin]
 Pos=31,367
